--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <html lang="en" style="
+    background-color: #62899c;
+    padding:10px;
+    height: 100%;
+    width: 100%;
+">
     <style>
       #root {
         width: 100%;
         height: 100%;
         /* background-color: pink; */
         position: absolute;
+        background-color: lightgray;
       }
+
     </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -35,7 +42,11 @@
     -->
     <title>React Redux App</title>
   </head>
-  <body>
+  <body style="
+  background-color: red;
+  height: 100%;
+  /* padding:30px; */
+">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
