--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         height: 100%;
         /* background-color: pink; */
         position: absolute;
-        background-color: lightgray;
+        /* background-color: lightgray; */
       }
 
     </style>
@@ -43,7 +43,7 @@
     <title>React Redux App</title>
   </head>
   <body style="
-  background-color: red;
+  /* background-color: red; */
   height: 100%;
   /* padding:30px; */
 ">
